--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lcr600",
-	"version": "0.1.0-2",
+	"version": "0.2.0",
 	"description": "Accessing LCR 600 device",
 	"main": "src/lib/__lcr600.js",
 	"scripts": {
