Removed serial.class and Use @iqrok/serial.helper. because why not , both are the same thing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lcr600",
-	"version": "0.2.2",
+	"version": "0.2.3",
 	"description": "Accessing LCR 600 device",
 	"main": "src/lib/__lcr600.js",
 	"scripts": {
@@ -17,7 +17,6 @@
 	"author": "iqrok",
 	"license": "MIT",
 	"dependencies": {
-		"@serialport/parser-inter-byte-timeout": "^9.0.1",
-		"serialport": "^9.0.2"
+		"@iqrok/serial.helper": "^0.1.0"
 	}
 }
